# CLEOD

./: .floo  CMakeLists.txt  main.cpp
Backend/: GarbageCollector.cpp  GarbageCollector.h  VirtualMachine.cpp  VirtualMachine.h
Frontend/: Scanner.cpp  Scanner.h  Token.cpp  Token.h
IDE/: IDE.pro  README.md  dialog.cpp  dialog.h  dialog.ui  linenumberarea.h  main.cpp  mcleodide.cpp  mcleodide.h  mcleodide.ui  resource.qrc  texteditor.cpp  texteditor.h
MiddleEnd/: Bytecode.cpp  Bytecode.h  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Object.h
Sprint1Files/: Cleod1.clbyt  Cleod1.cleod  Cleod1.cltok
build-IDE-Desktop_Qt_5_13_1_MinGW_32_bit_7_3_0-Debug/: CLEODTEST.cleod  Makefile  Makefile.Debug  Makefile.Release  e.cleod  fizzbuzz.cleod  object_script.McleodIDE.Debug  object_script.McleodIDE.Release  please.cleod  ui_dialog.h  ui_mcleodide.h
build-IDE-Desktop_Qt_5_13_1_MinGW_32_bit_7_3_0-Debug/debug/: moc_mcleodide.cpp  moc_texteditor.cpp  qrc_resource.cpp
build-IDE-Desktop_Qt_5_9_8_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mcleodide.h
build-IDE-Desktop_Qt_5_9_8_MinGW_32bit-Debug/debug/: moc_mcleodide.cpp  moc_texteditor.cpp  qrc_resource.cpp
